transleted into english

--- a/GridAnimacoes/index.html
+++ b/GridAnimacoes/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Mobile First</title>
+    <title>Grid Animações</title>
 
     <link rel="stylesheet" href="style.css">
 
@@ -21,7 +21,7 @@
     <div class="page">
 
         <header>
-            <img src="img/logoSorvete.svg"
+            <img src="img/iceCreamIcon.svg"
                 alt="Desenho de um sorvete, na cor lilás, de cascão, dentro de um círculo com bolinhas marrom claro no fundo.">
 
 
@@ -42,38 +42,38 @@
 
         <main>
             <div class="card-container">
-                <div class="card paletas">
-                    <img src="img/sorvete03.svg"
+                <div class="card palettes">
+                    <img src="img/iceCream03.svg"
                         alt="Imagem com 3 paletas de sabor framboesa, empilhadas uma emcima da outra, com a fruta framboesa por cima da última paleta.">
                     <h2>Paletas</h2>
                 </div>
 
-                <div class="card paletas-repeat">
-                    <img src="img/sorvete03.svg"
+                <div class="card palettes-repeat">
+                    <img src="img/iceCream03.svg"
                         alt="Imagem com 3 paletas de sabor framboesa, empilhadas uma emcima da outra, com a fruta framboesa por cima da última paleta.">
                     <h2>Paletas</h2>
                 </div>
 
                 <div class="card shakes">
-                    <img src="img/sorvete02.svg"
+                    <img src="img/iceCream02.svg"
                         alt="Imagem de um shake de frutas vermelhas com banana, dentro de um pote de vidro, com as frutas morango, amora e banana caindo no pote de vidro.">
                     <h2>Shakes</h2>
                 </div>
 
-                <div class="card massas">
-                    <img src="img/sorvete01.svg"
+                <div class="card pasta">
+                    <img src="img/iceCream01.svg"
                         alt="Imagem de uma bola de sorvete da cor lilás, numa colher de sorvete.">
                     <h2>Massas</h2>
                 </div>
 
-                <div class="card picoles">
-                    <img src="img/sorvete04.svg"
+                <div class="card popsicle">
+                    <img src="img/iceCream04.svg"
                         alt="Imagem de um picole de 3 sabores, sendo metade de frutas vermelhas, metade de frutas amarelas, e na diagonal de chocolate branco com castanhas.">
                     <h2>Picolés</h2>
                 </div>
 
-                <div class="card picoles-repeat">
-                    <img src="img/sorvete04.svg"
+                <div class="card popsicle-repeat">
+                    <img src="img/iceCream04.svg"
                         alt="Imagem de um picole de 3 sabores, sendo metade de frutas vermelhas, metade de frutas amarelas, e na diagonal de chocolate branco com castanhas.">
                     <h2>Picolés</h2>
                 </div>
